config jvm