@@ -15,5 +15,11 @@ bash ${dir}/../postgresql/deploy.sh sqlrec ${SQLREC_POSTGRESQL_PORT} ${SQLREC_PO
 export PGPASSWORD=${SQLREC_POSTGRESQL_PASSWORD}
 psql -h ${NODE_IP} -p ${SQLREC_POSTGRESQL_PORT} -U ${SQLREC_POSTGRESQL_USER} -d sqlrec -f ${dir}/../sql/master.sql
 
+DEFAULT_JAVA_TOOL_OPTIONS="-XX:+UseCompactObjectHeaders -XX:+UseStringDeduplication"
+export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS:-${DEFAULT_JAVA_TOOL_OPTIONS}}"
+if [ "${DEBUG_MODE}" = "true" ]; then
+    export JAVA_TOOL_OPTIONS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:${SQLREC_DEBUG_PORT}"
+fi
+
 envsubst < ${dir}/sqlrec.yaml > ${dir}/sqlrec.yaml.tmp
 kubectl apply -f ${dir}/sqlrec.yaml.tmp -n "${NAMESPACE}"
